ninth commit main section content article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ main {
     margin-left: 20px;
 }
 
-.search-engine-optimization {
+main section article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -84,37 +84,11 @@ main {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+main section article img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+main section article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
