--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ main section article h2 {
     font-size: 36px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
