--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/* Universal selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Element selectors select all of that element type */
 body {
     background-color: #d9dcd6;
 }
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+/* Class selectors select all elements with that class */
 .hero {
     height: 800px;
     width: 100%;
@@ -101,7 +104,7 @@ aside {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #0072bb;
 }
 
 aside section article {
