--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,12 +72,14 @@ p {
     margin-left: 25px;
 }
 
+ /* Main contains the class content */
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Main section article consolidates css selectors for .search-engine-optimization, .online-reputation-management, and .social-media-marketing */ 
 main section article {
     margin-bottom: 20px;
     padding: 50px;
@@ -87,15 +89,19 @@ main section article {
     color: #ffffff;
 }
 
+/* Main section article img consolidates css selectors for .search-engine-optimization img, .online-reputation-management img, and .social-media-marketing img. */
 main section article img {
     max-height: 200px;
 }
 
+/* Main section article h2 consolidates css selectors for .search-engine-optimization h2, .online-reputation-management h2, and .social-media-marketing h2. */
 main section article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* Aside contains the class benefits */
+/* Background-color changed to #0072bb in order to fix contrast issues with text color */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -107,16 +113,19 @@ aside {
     background-color: #0072bb;
 }
 
+/* Aside section article consolidates css selectors for .benefit-lead, .benefit-brand, and .benefit-cost */
 aside section article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* Aside section article h3 consolidates css selectors for .benefit-lead h3, .benefit-brand h3, and .benefit-cost h3 */
 aside section article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* Aside section article img consolidates css selectors for .benefit-lead img, .benefit-brand img, and .benefit-cost img */
 aside section article img {
     display: block;
     margin: 10px auto;
@@ -130,6 +139,7 @@ footer {
     text-align: center;
 }
 
+/* Changed from h2 to h4 so when you view the heading attributes, they fall in sequential order */
 footer h4 {
     font-size: 20px;
 }
